--- a/test1.css
+++ b/test1.css
@@ -1,6 +1,7 @@
 .border{
-    background-color: aquamarine;
-    border: 5px solid green;
+    background-image: url(./bg3.jpeg);
+    
+    border: 6px solid blue;
     padding: 40px;
     width: 900px;
     height: 1090px;
@@ -10,18 +11,21 @@ border-radius: 50px;
 background-color: black;
 border: 5px solid red;
 padding: 30px;
-width: 240px;
+width: 260px;
 height: 70px;
 position: relative;
 bottom: 2%;
 
+}
+.oval i{
+   font-size: X-large;
 }
 .oval1{
 border-radius: 50px;
 background-color: black;
 border: 5px solid red;
 padding: 10px;
-width: 290px;
+width: 350px;
 height: 40px;
 position: relative;
 left: 60%;
@@ -33,18 +37,18 @@ border-radius: 50px;
 background-color: black;
 border: 5px solid red;
 padding: 30px;
-width: 240px;
+width: 260px;
 height: 70px;
 position: relative;
-bottom: 250%;
+bottom: 260%;
 left: 220%;
 
 }
 
 .circle{
-  background-color: gold;
-  width: 250px;
-  height: 240px;
+  background-color: crimson;
+  width: 300px;
+  height: 290px;
   border-radius: 260px;
   border: 8px solid gray;
   position: relative;
@@ -54,50 +58,52 @@ left: 220%;
  
   .form{
     border: 5px dashed red;
-    width: 230px;
-    height: 500px;
-    color: red;
+    width: 280px;
+    height: 560px;
     font-size: small;
+    font-weight: bolder;
+    text-align: center;
     position: relative;
     left: 35%;
-    bottom: 50%;
+    bottom: 55%;
   }
   p{
     color: white;
-  }
+   }
 .menu{
 border-radius: 50px;
 background-color: black;
 border: 5px solid red;
 padding: 10px;
-width: 290px;
-height: 30px;
+width: 400px;
+height: 40px;
+text-align: center;
 position: absolute;
 left: 310px;
-bottom: -250px;
+bottom: -320px;
 }
 b{
   color: white;
-  
+  font-size: X-large;
 }
 .flex-container {
   display: flex;
   flex-wrap: nowrap;
   flex-flow: row wrap;
   position: relative;
-  bottom: 45%;
+  bottom: 50%;
   
 }
 
 .flex-container > div {
-  background-color: aqua;
-  width: 250px;
+  background-color: orange;
+  width: 270px;
   margin: 10px;
   text-align: center;
   line-height: 15px;
   font-size: 15px;
   border-radius: 30%;
-  border: 3px solid blue;
+  border: 4px solid blue;
 }
 .txt{
   color: black;
@@ -106,9 +112,15 @@ b{
   position: absolute;
   top: 60px;
 }
-h3{
-  color: blue;
+.form h2{
+  color: red;
 }
-h4{
-  font-size: larger;
+.form label{
+  color: red;
+  font-weight: 400;
+  font-size: large;
 }
+.flex-container h1{
+   color: crimson;
+}
+
