--- a/add1.css
+++ b/add1.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -8,17 +8,15 @@
     width: 100%;
   }
   .upper-container {
-    display: flex;
-    justify-content: space-between;
     width: 70%;
     height: 10%;
-    margin: 4% auto;
+    margin: 50px auto;
     position: relative;
   }
   .upper-container1 {
-    width: 50%;
+    width: 40%;
+    height: 100%;
     padding-top: 10px;
-    display: inline-block;
   }
   #tasks {
     font-weight: bold;
@@ -30,34 +28,35 @@
     opacity: 0.5;
   }
   .upper-container2 {
-    display: flex;
-    justify-content: space-between;
     width: 30%;
+    height: 100%;
+    position: absolute;
+    padding-top: 20px;
+    top: 0;
+    right: 0;
   }
   #addlist {
+    position: absolute;
     font-weight: lighter;
     width: 82%;
     font-size: 2.5rem;
     opacity: 0.5;
-    padding-top: 12%;
+    top: 0;
+    right: 0;
+    padding-top: 30px;
   }
   #circle {
-    padding-top: 15%;
-    
-  }
-  .middle_container{
-    display: flex;
-    width: 100%;
-    margin: auto;
-    justify-content: space-evenly;
-    height: auto;
+    padding-top: 12px;
+    top: 0;
+    right: 0;
   }
   .card {
     border: 1.5px solid pink;
-    margin-top: 3%;
+    margin-top: 10px;
     position: relative;
     height: 55vh;
-    width: 20%;
+    width: 17%;
+    margin-right: 80px;
     border-radius: 5%;
     box-shadow: 5px 5px 5px gray;
   }
@@ -74,16 +73,16 @@
   }
   .div1 {
     position: absolute;
-    top: 8%;
-    right:0%;
+    top: 25px;
+    right: 0;
     font-size: 28px;
-    width: 100%;
+    width: 80%;
     text-align: left;
     height: 15%;
     color: red;
     font-weight: lighter;
     border-bottom: 1px solid black;
-    opacity: 0.7;
+    opacity: 0.6;
   }
   .div2 {
     position: absolute;
@@ -100,7 +99,7 @@
   .div3 {
     position: absolute;
     top: 150px;
-    right: 0px;
+    right: 0;
     font-size: 22px;
     width: 95%;
     text-align: left;
@@ -118,9 +117,50 @@
     justify-content: center;
     height: auto;
   }
-  div a{
-    color: red;
-    opacity: 0.6;
-    text-decoration: none;
+  .notshow {
+    filter: blur(7px);
+    /* -webkit-filter: blur(6px); */
   }
+  .pop-up {
+    position: absolute;
+    top: 30%;
+    left: 33%;
+    color: red;
+    font-size: 1rem;
+    height: 35vh;
+    width: 33%;
+    border: 1px solid red;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 3px 5px 5px gray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   
+  }
+  #add-new {
+    opacity: 0.7;
+    font-size: 22px;
+    padding-top: 30px;
+  }
+  .pop-upbar {
+    margin-top: 20px;
+    
+    border: 1px solid red;
+    border-radius: 5px;
+    box-shadow: 3px 5px 5px gray;
+    height: 20%;
+    width: 70%;
+  }
+  .pop-upbutton {
+    margin-top: 20px;
+    font-size: 1.2rem;
+    color: white;
+    padding: 7px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 20px;
+    width: 22%;
+    background-color: red;
+    opacity: 0.7;
+  }
