--- a/page.css
+++ b/page.css
@@ -1,62 +1,105 @@
-.sra{
-    width: 1000px;
-    height: 500px;
-    background-color: white;
-   
-}
-
-.heading{
-   
-    font-size: xx-large;
+.cardcontianer3 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .boxcontainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 14vh;
+    width: 100%;
+  }
+  .trip {
+    width: 40%;
+    height: 5vh;
+    font-size: 4rem;
+    font-weight: bold;
     text-align: center;
-}
-.border{
-    text-align: center;
-    position: relative;
-    left: 400px;
-}
-
-.page1{
-    width: 100px;
-    height: 150px;
-    padding: 30px;
-    color: red;
-    border: 1px solid red;
-    border-radius: 10px;
+  }
   
-}
-.p1{
+  .hr1 {
+    position: relative;
+    top: 40px;
+    border-top: 1px solid black;
+    width: 18%;
+  }
+  .hr2 {
+    position: relative;
+    top: 40px;
+    border-top: 1px solid black;
+    width: 18%;
+  }
+  .upper-container4 {
+    width: 30%;
+  
+    opacity: 0.6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #arrow1 {
+    display: none;
+  }
+  #back {
+    font-weight: bold;
+    font-size: 3rem;
+  }
+  .card4 {
+    border: 1.5px solid rgb(192, 61, 83);
+    margin-top: 30px;
+    position: relative;
+    height: 70vh;
+    width: 36%;
+    background-color: white;
+    border-radius: 5%;
+    box-shadow: 2px 2px 5px gray;
+  }
+  .div4 {
+    position: absolute;
+    top: 5px;
+    right: 0;
+    font-size: 2.2rem;
+    width: 65%;
+    text-align: left;
+    height: 20%;
+  
+    color: red;
+    font-weight: 400;
+    border-bottom: 1px solid black;
+    opacity: 0.8;
+  }
+  .div5 {
+    position: absolute;
+    top: 110px;
+    right: 15px;
+    font-size: 1.6rem;
+    width: 60%;
+    text-align: left;
+    font-weight: bold;
+    color: red;
     text-decoration: line-through;
-}
-.checkbox{
-    color: black;
-}
-.material-icons{
-   color: red;
-   background-color: white;
-   text-align: center;
-   
-}
-.hr1{
- position: relative;
-  top: 20px;
-  left: 230px;
-  border-top: 1px solid black;
-  width: 18%;
-}
-.hr2{
-    position: relative;
-  bottom: 15px;
-  left: 600px;
-  border-top: 1px solid black;
-  width: 18%;
-}
-.arrow1{
-    position: relative;
-    left: 60px;
-}
-.arrow2{
-    position: relative;
-    top: 30px;
-    left: 450px;
-}
+  }
+  .div6 {
+    position: absolute;
+    top: 190px;
+    right: 0;
+    font-size: 1.6rem;
+    width: 70%;
+    text-align: left;
+    height: 15%;
+    opacity: 0.8;
+  }
+  #check {
+    width: 20px;
+    height: 20px;
+  }
+  #circle1 {
+    position: absolute;
+    right: 5%;
+    bottom: 3%;
+    opacity: 0.7;
+  }
+  
